# spec-fuzzer

./: .gitmodules  README.md  setup.sh
rust_fuzzer/: Cargo.toml
rust_fuzzer/src/: bitmap.rs  fuzzer.rs  input.rs  main.rs  queue.rs  romu.rs  runner.rs
rust_fuzzer_debug/: Cargo.toml
rust_fuzzer_debug/src/: main.rs
structured_fuzzer/: Cargo.toml
structured_fuzzer/examples/: gen.rs
structured_fuzzer/src/: custom_dict.rs  data_buff.rs  lib.rs  mutator.rs
structured_fuzzer/src/graph_mutator/: atomic_data.rs  generators.rs  graph_builder.rs  graph_storage.rs  mod.rs  regex_generator.rs  spec.rs  spec_loader.rs
structured_fuzzer/src/primitive_mutator/: mutator.rs
structured_fuzzer/src/random/: distributions.rs  romu.rs
