[package]
name = "rust_fuzzer_debug"
version = "0.1.0"
authors = ["Sergej Schumilo <sergej@schumilo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzz_runner={path="../libnyx/fuzz_runner"}
config={path="../libnyx/config"}
structured_fuzzer={path="../structured_fuzzer"}
helpers={path="../helpers"}
core_affinity="0.5.10"
serde ="1.0.104"
serde_derive ="1.0.104"
rmp-serde ="0.14.3"
ron = "0.5.1"
clap="2.33.0"
rand = "0.7.3"
glob="0.3.0"
colored = "2.0.0"
walkdir = "2.3.1"
filetime = "0.2"
